--- a/Seção_03 - Lógica de programação/Aula 044 __ Exercício (unindo tudo aprendido até aqui e mais)/assets/css/style.css
+++ b/Seção_03 - Lógica de programação/Aula 044 __ Exercício (unindo tudo aprendido até aqui e mais)/assets/css/style.css
@@ -71,6 +71,18 @@ h1, h3{
     justify-content: space-between;
 }
 
+.fail, .sucess{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: max-content;
+    padding-top: 3px;
+}
+
 .fail{
-    background-color: red;
+    background-color: rgb(248, 41, 41);
+}
+
+.sucess{
+    background-color: rgb(44, 133, 44);
 }
