--- a/Seção_03 - Lógica de programação/Aula 048 __ Exercício com switch e date/assets/css/style.css
+++ b/Seção_03 - Lógica de programação/Aula 048 __ Exercício com switch e date/assets/css/style.css
@@ -30,6 +30,12 @@ body{
     background-color: #fff;
 }
 
+div{
+    border: 1px solid black;
+    margin-bottom: 50px;
+    padding: 0 20px;
+}
+
 form input, form button{
     display: block;
     width: 100%;
