--- a/Seção_03 - Lógica de programação/Aula 066 __ Exercício - Criando um timer com setInterval/assets/css/style.css
+++ b/Seção_03 - Lógica de programação/Aula 066 __ Exercício - Criando um timer com setInterval/assets/css/style.css
@@ -59,3 +59,12 @@ h1{
     background-color: #000;
     color: #fff;
 }
+
+.invalid{
+    pointer-events: none;
+    opacity: 0.5
+}
+
+.pause{
+    color: red;
+}
