--- a/Seção_03 - Lógica de programação/Aula 066 __ Exercício - Criando um timer com setInterval/assets/css/style.css
+++ b/Seção_03 - Lógica de programação/Aula 066 __ Exercício - Criando um timer com setInterval/assets/css/style.css
@@ -26,9 +26,10 @@ body{
     align-items: center;
     justify-content: space-around;
     width: 500px;
-    height: 400px;
+    min-height: 400px;
     padding: 50px;
     background-color: #fff;
+    gap: 20px;
 }
 
 h1{
@@ -50,12 +51,31 @@ h1{
 }
 
 .buttons button{
-    font-size: 1.3rem;
+    font-size: 1.3em;
     margin: 0 10px;
     padding: 15px;
     font-weight: bold;
     border: none;
     cursor: pointer;
+    background-color: #000;
+    color: #fff;
+}
+
+.lapsContainer{
+    width: 100%;
+    height: auto;
+    max-height: 300px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    display: flex;
+    flex-direction: column;
+}
+
+.lapRow{
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    margin: 1px;
     background-color: #000;
     color: #fff;
 }
