--- a/Seção_03 - Lógica de programação/Aula 067 __ Criando uma Lista de tarefas/assets/css/style.css
+++ b/Seção_03 - Lógica de programação/Aula 067 __ Criando uma Lista de tarefas/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Overpass:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
 
 :root{
     --primary__color: #35403A;
@@ -7,16 +7,13 @@
 
 *{
     box-sizing: border-box;
-    outline: 0;
+    padding: 0;
+    margin: 0;
 }
 
 body{
-    padding: 0;
-    margin: 0;
     background-color: var(--primary__color);
-    font-family: 'Overpass', sans-serif;
-    font-size: 1.3em;
-    line-height: 1.3em;
+    font-family: 'Poppins', sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -24,39 +21,74 @@ body{
 }
 
 .container{
-    max-width: 640px;
-    margin: 50px auto;
-    padding: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    width: 700px;
+    padding: 50px;
     background-color: #fff;
+    gap: 20px;
 }
 
-form input, form button{
-    display: block;
-    width: 100%;
-    margin-bottom: 20px;
-}
-
-form input{
-    font-size: 24px;
-    height: 50px;
+h1{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 530px;
+    font-size: 3rem;
+    background-color: #000;
+    color: #fff;
     padding: 0 20px;
 }
 
-form input:focus{
-    outline: 1px solid var(--primary__color);
-}
-
-form button{
+input{
+    font-size: 1.3em;
+    margin: 0 10px;
+    padding: 15px;
+    font-weight: bold;
     border: none;
-    background-color: var(--primary__color);
-    color: #fff;
-    font-size: 18px;
-    font-weight: 700;
-    height: 50px;
     cursor: pointer;
-    margin-top: 30px;
+    background-color: #000;
+    color: #fff;
 }
 
-form button:hover{
-    background: var(--secondary__color);
+.addTaskBtn{
+    font-size: 1.3em;
+    margin: 0 10px;
+    padding: 15px;
+    font-weight: bold;
+    border: none;
+    cursor: pointer;
+    background-color: #000;
+    color: #fff;
+}
+
+.removeBtn{
+    background-color: #fff;
+    padding: 5px;
+    border: none;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.taskContainer{
+    list-style: none;
+    width: 530px;
+    display: flex;
+    flex-direction: column;
+    font-weight: bold;
+    color: #fff;
+    gap: 5px;
+}
+
+.taskRow{
+    background-color: #000;
+    padding: 10px;
+    display: flex;
+    gap: 60px;
+}
+
+.hidden{
+    display: none;
 }
