--- a/Seção_04 - JavaScript Funções (Avançado)/Aula 076 __ Praticando com factory functions/assets/css/style.css
+++ b/Seção_04 - JavaScript Funções (Avançado)/Aula 076 __ Praticando com factory functions/assets/css/style.css
@@ -30,6 +30,10 @@ body{
     background-color: #fff;
 }
 
+h1{
+    text-align: center;
+}
+
 .calculadora{
     width: 400px;
 }
@@ -38,6 +42,7 @@ body{
     font-size: 2em;
     width: 100%;
     text-align: right;
+    margin-bottom: 20px;
 }
 
 .btn {
